--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,31 @@ jobs:
           docker build -t spring-cicd . 
           docker tag spring-cicd jeonsooeun/spring-cicd:${GITHUB_SHA::7}
           docker push jeonsooeun/spring-cicd:${GITHUB_SHA::7}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: ap-northeast-2
+      - name: Start Session Manager session
+        run: aws ssm start-session --target i-0a8af3ca1686047a6
+      - name: Deploy to Server
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-northeast-2
+        run: |
+          aws ssm send-command \
+            --instance-ids i-0a8af3ca1686047a6 \
+            --document-name "AWS-RunShellScript" \
+            --parameters "commands=[
+              'if sudo docker ps -a --format \\'{{.Names}}\\' | grep -q \'^server$\\'; then',
+              ' sudo docker stop server',
+              ' sudo docker rm server',
+              'fi',
+              'sudo docker pull jeonsooeun/spring-cicd:{GITHUB_SHA::7};,
+              'sudo docker tag jeonsooeun/spring-cicd:${GITHUB_SHA::7} spring-cicd',
+              'sudo docker run -d --name server -p 8080:8080 spring-cicd'
+            ]" \
+            --output text
+
