--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
               ' sudo docker stop server',
               ' sudo docker rm server',
               'fi',
-              'sudo docker pull jeonsooeun/spring-cicd:{GITHUB_SHA::7};,
+              'sudo docker pull jeonsooeun/spring-cicd:{GITHUB_SHA::7}',
               'sudo docker tag jeonsooeun/spring-cicd:${GITHUB_SHA::7} spring-cicd',
               'sudo docker run -d --name server -p 8080:8080 spring-cicd'
             ]" \
